crates/mwl-ir/src/snapshots/mwl_ir__lower__tests__reading_an_int_element_through_a_literal_key_normalizes_it_to_a_string.snap
---
source: crates/mwl-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object, array) -> int {
  bb0:
    safepoint
    v0 = param 0  ; object
    v1 = param 1  ; array
    ; stmt s0 @4:5-4:18
    v2 = const.int 0  ; int
    v3 = helper.int_to_string v2  ; string
    v4 = array.get v1, v3  ; int
    release v3
    release v1
    release v0
    return v4
}
