crates/mwl-ir/src/snapshots/mwl_ir__lower__tests__reassignment_produces_a_fresh_ssa_value.snap
---
source: crates/mwl-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn bump(int) -> int {
  bb0:
    v0 = param 0  ; int
    ; stmt s0 @4:5-4:19
    ; stmt s1 @5:5-5:21
    v1 = const.int 1  ; int
    v2 = add v0, v1  ; int
    ; stmt s2 @6:5-6:17
    return v2
}
