crates/mwl-ir/src/snapshots/mwl_ir__lower__tests__returning_a_string_returning_calls_result_needs_no_retain.snap
---
source: crates/mwl-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object) -> string {
  bb0:
    safepoint
    v0 = param 0  ; object
    ; stmt s0 @4:5-4:25
    v1 = call T::make()  ; string
    return v1
}
