crates/mwl-ir/src/snapshots/mwl_ir__lower__tests__unary_and_comparison_operators.snap
---
source: crates/mwl-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn check(int) -> bool {
  bb0:
    safepoint
    v0 = param 0  ; int
    ; stmt s0 @4:5-4:25
    v1 = neg v0  ; int
    v2 = const.int 0  ; int
    v3 = lt v1, v2  ; bool
    ; stmt s1 @5:5-5:18
    v4 = not v3  ; bool
    return v4
}
